Drop JavaTemplate; only change names & types